force-app/main/default/objects/SESOC__Recipient__c/SESOC__Recipient__c.object-meta.xml
<CustomObject>
    <description>E-Signature Document Recipients</description>
    <label>Recipient</label>
    <nameField>
        <displayFormat>R-{000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>