force-app/main/default/objects/SESOC__Recipient__c/fields/SESOC__Datetime_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Datetime_of_Completion__c</fullName>
    <description>The system automatically populates this datetime field to track the time the recipient completed the E-Signature ceremony. By default, it is blank.</description>
    <label>Date/Time of Completion</label>
    <type>DateTime</type>
</CustomField>