force-app/main/default/objects/SESOC__Recipient__c/fields/SESOC__Signing_Method__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Signing_Method__c</fullName>
    <label>Signing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
                <default>true</default>
                <label>Email</label>
            </value>
            <value>
                <fullName>Online Application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>