force-app/main/default/objects/SESOC__Recipient__c/fields/SESOC__User__c.field-meta.xml
<CustomField>
    <fullName>SESOC__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The system automatically populates this optional lookup field to track the association to a User. By default, it is blank.</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Recipients</relationshipName>
    <type>Lookup</type>
</CustomField>